--- a/src/stylesheets/modules/navbar.scss
+++ b/src/stylesheets/modules/navbar.scss
@@ -141,6 +141,10 @@
             display: block;
             margin: 20px 0;
 
+            &:first-child {
+                margin-right: 20px;
+            }
+
             @media(min-width: $screen-sm) {
                 display: inline-block;
                 margin: 0;
